add priority nav

--- a/package.json
+++ b/package.json
@@ -102,10 +102,12 @@
     "jade-get-data": "^1.0.0",
     "jade-injected": "^1.0.2",
     "jquery": "^3.4.1",
+    "magnific-popup": "^1.1.0",
     "merge-stream": "^1.0.0",
     "node-notifier": "^4.3.1",
     "npm-install-webpack-plugin": "^2.0.2",
     "npm-run-all": "^1.8.0",
+    "priority-nav": "^1.0.13",
     "pug-lint": "^2.2.2",
     "require-dir": "^0.3.2",
     "rimraf": "^2.5.0",
