--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "rimraf": "^2.5.0",
     "run-sequence": "^1.2.2",
     "select2": "^4.0.7",
+    "simplebar": "^4.1.0",
     "slick-carousel": "^1.8.1",
     "source-map-loader": "^0.1.5",
     "spritesmith-dir-checker": "^1.0.0",
